// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ListSubsection
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    title="test"
  >
    <ListSubsectionHeader
      isCollapsed={false}
      isCollapsible={false}
      level={2}
      title="test"
    >
      <li
        className="orion-fusion-theme"
      >
        <h2
          className="title"
        >
          <div
            className="subsection-header"
          >
            <div
              className="fill"
            >
              test
            </div>
          </div>
        </h2>
      </li>
    </ListSubsectionHeader>
    <li>
      <ul
        className="list orion-fusion-theme"
        level={2}
        title="test"
      />
    </li>
  </ListSubsection>
</ThemeContextProvider>
`;

exports[`should render with callback functions 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    onSelect={[MockFunction]}
    refCallback={[MockFunction]}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={2}
      onSelect={[MockFunction]}
      refCallback={[MockFunction]}
      title="test"
    />
  </li>
</Fragment>
`;

exports[`should render with isCollapsed 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={true}
    isCollapsible={false}
    level={2}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={2}
      title="test"
    />
  </li>
</Fragment>
`;

exports[`should render with isCollapsible 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={true}
    level={2}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={2}
      title="test"
    />
  </li>
</Fragment>
`;

exports[`should render with items 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={2}
      title="test"
    >
      <ListItem
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key="123"
      />
      <ListItem
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key="124"
      />
      <ListItem
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key="125"
      />
      <ListItem
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key="126"
      />
      <ListItem
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key="127"
      />
    </ul>
  </li>
</Fragment>
`;

exports[`should render with level 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={3}
      title="test"
    />
  </li>
</Fragment>
`;

exports[`should render with no items 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={2}
      title="test"
    />
  </li>
</Fragment>
`;
